--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -1,7 +1,7 @@
 name: Build Android APK (Mobile Only)
 
 on:
-  workflow_dispatch:  # دا کرښه تاسو ته اجازه درکوي چې په لاسي ډول بلډ پیل کړئ
+  workflow_dispatch:
   push:
     branches:
       - main
@@ -11,18 +11,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Source
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup Java
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           distribution: 'zulu'
           java-version: '17'
 
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 20
 
       - name: Install Dependencies
         run: npm install
@@ -34,7 +34,6 @@ jobs:
           npm install @capacitor/android
 
       - name: Initialize Capacitor
-        # دلته موږ ګورو چې که capacitor.config.ts نه وي، نو جوړ یې کړه
         run: |
           if [ ! -f "capacitor.config.ts" ] && [ ! -f "capacitor.config.json" ]; then
             npx cap init "ElyasTimeApk" "com.elyasomar.timeapp" --web-dir=dist
@@ -44,7 +43,6 @@ jobs:
         run: npm run build
 
       - name: Add Android Platform
-        # دا کمانډ هر ځل د انډرایډ فولډر له سره جوړوي
         run: |
           npx cap add android
           npx cap sync
@@ -56,7 +54,7 @@ jobs:
           ./gradlew assembleDebug
 
       - name: Upload APK
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: debug-apk
           path: android/app/build/outputs/apk/debug/app-debug.apk
